7:00/patrones-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: patrones
  labels:
    app: patrones
spec:
  replicas: 2
  selector:
    matchLabels:
      app: patrones
  template:
    metadata:
      labels:
        app: patrones
    spec:
      containers:
      - name: patrones
        image: danielsabana/patrones:6.0.0
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 100m
            memory: 500Mi
        startupProbe: 
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 9 
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          periodSeconds: 10
