7:00/patrones-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: patrones
spec:
  type: ClusterIP
  selector: 
    app: patrones
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
